# DESAFIO_CRUDD

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  crud.py  database.py  models.py  requirements.txt  schemas.py
