[tool.poetry]
name = "desafio-python"
version = "0.1.0"
description = ""
authors = ["Raphael Loureiro <raphaelzinhojorge@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.36"
pydantic = {extras = ["email"], version = "^2.9.2"}
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
psycopg2-binary = "^2.9.10"
pandas = "^2.2.3"
streamlit = "^1.40.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
